Fix: remove function provoking bug

--- a/clone.html
+++ b/clone.html
@@ -1682,15 +1682,66 @@
                                             class="background-color-basic radius-32 margin-top-12 padding-16-32 absolute visibility-hidden"
                                             id="structured-search-input-field-guests-panel">
                                             <div style="padding: 0px 6px; width: 342px;">
-                                                <div style="padding: 24px 4px 24px 0px;" class="flex-container">
+                                                <div style="padding: 24px 4px 24px 0px;" class="flex-container justify-content-between">
                                                     <section>
                                                         <div>
-                                                            <h1 style="margin: 0px;" class="text font-16px font-600 ">성인
+                                                            <h1 style="margin: 0px;" class="text font-16px font-500">성인
                                                             </h1>
                                                         </div>
                                                         <div style="padding-top: 4px;"
                                                             class="text font-14px font-400 line-height-18px font-grey-106">
                                                             13세 이상</div>
+                                                    </section>
+                                                    <div class="flex-container align-items-center justify-content-between height-32 width-104">
+                                                        <button class="radius-50 grey-border-235 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
+                                                            <span style="padding: 5px; width: 22px; height: 22px;" class="font-grey-235">
+                                                                <svg viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 12px; width: 12px; fill: currentcolor;"><path d="m.75 6.75h10.5v-1.5h-10.5z"></path></svg>
+                                                            </span>
+                                                        </button>
+                                                        <div>
+                                                            <span id="stepper-adults-value">0</span>
+                                                        </div>
+                                                        <button class="radius-50 black-border-176 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
+                                                            <span style="padding: 5px; width: 22px; height: 22px;" class="font-grey-106">
+                                                                <svg viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 12px; width: 12px; fill: currentcolor;"><path d="m6.75.75v4.5h4.5v1.5h-4.5v4.5h-1.5v-4.5h-4.5v-1.5h4.5v-4.5z"></path></svg>
+                                                            </span>
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                                <div style="padding: 24px 4px 24px 0px;" class="flex-container">
+                                                    <section>
+                                                        <div>
+                                                            <h1 style="margin: 0px;" class="text font-16px font-500">어린이
+                                                            </h1>
+                                                        </div>
+                                                        <div style="padding-top: 4px;"
+                                                            class="text font-14px font-400 line-height-18px font-grey-106">
+                                                            2~12세</div>
+                                                    </section>
+                                                </div>
+                                                <div style="padding: 24px 4px 24px 0px;" class="flex-container">
+                                                    <section>
+                                                        <div>
+                                                            <h1 style="margin: 0px;" class="text font-16px font-500">유아
+                                                            </h1>
+                                                        </div>
+                                                        <div style="padding-top: 4px;"
+                                                            class="text font-14px font-400 line-height-18px font-grey-106">
+                                                            2세 미만</div>
+                                                    </section>
+                                                </div>
+                                                <div style="padding: 24px 4px 24px 0px;" class="flex-container">
+                                                    <section>
+                                                        <div>
+                                                            <h1 style="margin: 0px;" class="text font-16px font-500">반려동물
+                                                            </h1>
+                                                        </div>
+                                                        <div style="padding-top: 4px;"
+                                                            class="text font-14px font-400 line-height-18px font-grey-106">
+                                                            <button>
+                                                                보조동물을 동반하시나요?
+                                                            </button>
+                                                        </div>
                                                     </section>
                                                 </div>
                                             </div>
