--- a/clone.html
+++ b/clone.html
@@ -286,8 +286,8 @@
                                                     <div style="padding: 0px 8px;">
                                                         <div>
                                                             <!-- 탭 -->
-                                                            <div style="overflow: visible; padding: 0px 12px; margin: 0px -12px;"
-                                                                class="flex-container justify-content-start travel-tab-list text-left text relative"
+                                                            <div style="padding: 0px 12px; margin: 0px -12px;"
+                                                                class="flex-container justify-content-start travel-tab-list text-left text relative overflow-y-auto scrollbar-width-none"
                                                                 id="tabs-placesByAreasTabId" role="tablist">
                                                                 <!-- 전 세계 -->
                                                                 <button id="tab-placesByAreasTabId-0"
@@ -1679,10 +1679,10 @@
                                         </div>
                                         <!-- 게스트 추가 레이어 -->
                                         <div style="box-shadow: 0 3px 12px 0 rgb(0 0 0/0.15); overscroll-behavior: contain; right: 0px; top: 64px; max-height: calc(100vh - 200px);"
-                                            class="background-color-basic radius-32 margin-top-12 padding-16-32 absolute visibility-hidden"
+                                            class="background-color-basic radius-32 margin-top-12 padding-16-32 absolute visibility-hidden overflow-auto"
                                             id="structured-search-input-field-guests-panel">
                                             <div style="padding: 0px 6px; width: 342px;">
-                                                <div style="padding: 24px 4px 24px 0px;" class="flex-container justify-content-between">
+                                                <div style="padding: 24px 4px 24px 0px;" class="flex-container justify-content-between align-items-center">
                                                     <section>
                                                         <div>
                                                             <h1 style="margin: 0px;" class="text font-16px font-500">성인
@@ -1708,7 +1708,7 @@
                                                         </button>
                                                     </div>
                                                 </div>
-                                                <div style="padding: 24px 4px 24px 0px;" class="flex-container">
+                                                <div style="padding: 24px 4px 24px 0px;" class="flex-container grey-line">
                                                     <section>
                                                         <div>
                                                             <h1 style="margin: 0px;" class="text font-16px font-500">어린이
@@ -1719,7 +1719,7 @@
                                                             2~12세</div>
                                                     </section>
                                                 </div>
-                                                <div style="padding: 24px 4px 24px 0px;" class="flex-container">
+                                                <div style="padding: 24px 4px 24px 0px;" class="flex-container grey-line">
                                                     <section>
                                                         <div>
                                                             <h1 style="margin: 0px;" class="text font-16px font-500">유아
@@ -1730,7 +1730,7 @@
                                                             2세 미만</div>
                                                     </section>
                                                 </div>
-                                                <div style="padding: 24px 4px 24px 0px;" class="flex-container">
+                                                <div style="padding: 24px 4px 24px 0px;" class="flex-container grey-line">
                                                     <section>
                                                         <div>
                                                             <h1 style="margin: 0px;" class="text font-16px font-500">반려동물
