Design: hide scrollbar in item category scrollbar

--- a/clone.html
+++ b/clone.html
@@ -1828,7 +1828,7 @@
             class="sticky page-padding padding-top-12">
             <div class="grid-container grid-template-columns-full">
                 <div class="flex-container column-gap-16 align-items-center">
-                    <div class="overflow-x-auto relative">
+                    <div class="overflow-x-hidden relative">
                         <!-- 카테고리 스크롤 왼쪽 화살표 -->
                         <div style="background-image: linear-gradient(to left, rgba(255, 255, 255, 0), rgb(255, 255, 255) 40px); transition-behavior: normal, normal, normal; transition-delay: 0s, 0s, 0s; transition-duration: 0.2s, 0.2s, 0.2s; transition-property: opacity, visibility, transform; transition-timing-function: ease, ease, ease;"
                             class="absolute height-full flex-container align-items-center z-index-1 pa_width-40 pa_height-full pa_z-index--1">
@@ -1845,8 +1845,8 @@
                             </button>
                         </div>
                         <!-- 상세 여행지 종류 -->
-                        <div style="height: 78px; margin-right: 20px;"
-                            class="grid-container hidden-scrollbar scrollbar-width-none overflow-x-auto overflow-y-hidden grid-auto-flow-column column-gap-32 justify-content-start flex-basis-zero flex-grow-1 flex-shrink-1">
+                        <div id="category-item-scrollbar" style="height: 78px; margin-right: 20px;"
+                            class="grid-container hidden-scrollbar overflow-x-auto overflow-y-hidden grid-auto-flow-column column-gap-32 justify-content-start flex-basis-zero flex-grow-1 flex-shrink-1">
                             <div style="margin-top: 12px; margin-right: 8px; margin-bottom: 10px; padding: 4px 0px; transition-behavior: normal; transition-delay: 0s; transition-duration: 0.2s; transition-property: opacity; transition-timing-function: cubic-bezier(0.2, 0, 0, 1);"
                                 class="radius-8 width-max background-color-transparent font-500 font-12px line-height-16px font-black-0 opacity-6 hover-font-black-0 hover-opacity-10 pa_child_hover-background-color-0 pa_child_hover-opacity-1">
                                 <div id="category-item--기상천외한 숙소--checked"
