Feat: Hide scroll button according to scroll event

--- a/clone.html
+++ b/clone.html
@@ -1831,7 +1831,7 @@
                     <div class="overflow-x-hidden relative">
                         <!-- 카테고리 스크롤 왼쪽 화살표 -->
                         <div style="background-image: linear-gradient(to left, rgba(255, 255, 255, 0), rgb(255, 255, 255) 40px); transition-behavior: normal, normal, normal; transition-delay: 0s, 0s, 0s; transition-duration: 0.2s, 0.2s, 0.2s; transition-property: opacity, visibility, transform; transition-timing-function: ease, ease, ease;"
-                            class="absolute height-full flex-container align-items-center z-index-1 pa_width-40 pa_height-full pa_z-index--1">
+                            class="absolute height-full visibility-hidden opacity-10 flex-container align-items-center z-index-1 pa_width-40 pa_height-full pa_z-index--1">
                             <button
                                 class="radius-50 background-color-basic black-border-03 width-32 height-32 flex-container justify-content-center align-items-center"
                                 data-shared-element-id="previous-button">
@@ -2032,7 +2032,7 @@
                         </div>
                         <!-- 카테고리 스크롤 오른쪽 화살표 -->
                         <div style="padding-right: 8px; background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgb(255, 255, 255) 40px); transition-behavior: normal, normal, normal; transition-delay: 0s, 0s, 0s; transition-duration: 0.2s, 0.2s, 0.2s; transition-property: opacity, visibility, transform; transition-timing-function: ease, ease, ease;"
-                            class="absolute top-0 right--8 height-full flex-container align-items-center z-index-1 pb_width-40 pb_height-full pb_z-index--1">
+                            class="absolute top-0 right--8 opacity-0 height-full flex-container align-items-center z-index-1 pb_width-40 pb_height-full pb_z-index--1">
                             <button
                                 class="radius-50 background-color-basic black-border-03 width-32 height-32 flex-container justify-content-center align-items-center"
                                 data-shared-element-id="next-button">
