Fix: fix that event is not working by innerElement
use Element.closest()

--- a/clone.html
+++ b/clone.html
@@ -1640,7 +1640,7 @@
                                                         class="font-black-34 font-12px font-500 padding-bottom-2 line-height-16px">
                                                         여행자
                                                     </div>
-                                                    <div class="font-grey-113 font-14px font-400 line-height-18px">
+                                                    <div class="font-grey-113 font-14px font-400 width-full line-height-18px text-ellipsis text-nowrap overflow-x-hidden">
                                                         게스트 추가
                                                     </div>
                                                 </div>
@@ -1675,6 +1675,7 @@
                                             class="background-color-basic radius-32 margin-top-12 padding-16-32 absolute visibility-hidden overflow-auto"
                                             id="structured-search-input-field-guests-panel">
                                             <div style="padding: 0px 6px; width: 342px;">
+                                                <!-- 성인 수 -->
                                                 <div style="padding: 24px 4px 24px 0px;"
                                                     class="flex-container justify-content-between align-items-center">
                                                     <section>
@@ -1688,8 +1689,8 @@
                                                     </section>
                                                     <div
                                                         class="flex-container align-items-center justify-content-between height-32 width-104">
-                                                        <button data-testid="stepper-adults-decrease-button"
-                                                            class="radius-50 grey-border-235 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
+                                                        <button data-testid="stepper-adults-decrease-button" disabled
+                                                            class="cursor-not-allowed radius-50 grey-border-235 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
                                                             <span style="padding: 5px; width: 22px; height: 22px;"
                                                                 class="font-grey-235">
                                                                 <svg viewBox="0 0 12 12"
@@ -1721,6 +1722,7 @@
                                                         </button>
                                                     </div>
                                                 </div>
+                                                <!-- 어린이 수 -->
                                                 <div style="padding: 24px 4px 24px 0px;"
                                                     class="flex-container grey-line justify-content-between align-items-center">
                                                     <section>
@@ -1734,8 +1736,8 @@
                                                     </section>
                                                     <div
                                                         class="flex-container align-items-center justify-content-between height-32 width-104">
-                                                        <button data-testid="stepper-children-decrease-button"
-                                                            class="radius-50 grey-border-235 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
+                                                        <button data-testid="stepper-children-decrease-button" disabled
+                                                            class="cursor-not-allowed radius-50 grey-border-235 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
                                                             <span style="padding: 5px; width: 22px; height: 22px;"
                                                                 class="font-grey-235">
                                                                 <svg viewBox="0 0 12 12"
@@ -1767,6 +1769,7 @@
                                                         </button>
                                                     </div>
                                                 </div>
+                                                <!-- 유아 수 -->
                                                 <div style="padding: 24px 4px 24px 0px;"
                                                     class="flex-container grey-line justify-content-between align-items-center">
                                                     <section>
@@ -1780,8 +1783,8 @@
                                                     </section>
                                                     <div
                                                         class="flex-container align-items-center justify-content-between height-32 width-104">
-                                                        <button data-testid="stepper-infants-decrease-button"
-                                                            class="radius-50 grey-border-235 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
+                                                        <button data-testid="stepper-infants-decrease-button" disabled
+                                                            class="cursor-not-allowed radius-50 grey-border-235 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
                                                             <span style="padding: 5px; width: 22px; height: 22px;"
                                                                 class="font-grey-235">
                                                                 <svg viewBox="0 0 12 12"
@@ -1813,6 +1816,7 @@
                                                         </button>
                                                     </div>
                                                 </div>
+                                                <!-- 반려동물 수 -->
                                                 <div style="padding: 24px 4px 24px 0px;"
                                                     class="flex-container grey-line justify-content-between align-items-center">
                                                     <section>
@@ -1830,8 +1834,8 @@
                                                     </section>
                                                     <div
                                                         class="flex-container align-items-center justify-content-between height-32 width-104">
-                                                        <button data-testid="stepper-pets-decrease-button"
-                                                            class="radius-50 grey-border-235 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
+                                                        <button data-testid="stepper-pets-decrease-button" disabled
+                                                            class="cursor-not-allowed radius-50 grey-border-235 background-color-basic width-32 height-32 flex-container align-items-center justify-content-center">
                                                             <span style="padding: 5px; width: 22px; height: 22px;"
                                                                 class="font-grey-235">
                                                                 <svg viewBox="0 0 12 12"
